--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
         <h3>Spinning Text Projects</h3>
         <p>Created with Cinema 4D with Python scripts for Raw 3D animations. Imported into Adobe After Effects before utilizing Typescript and plugins to compose the final result.</p>
         <div class="videos">
-            <iframe title="Spinning Text Animation: Jolien" src="https://www.youtube.com/embed/video-id-1" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Olivia" src="https://www.youtube.com/embed/video-id-2" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Nicole" src="https://www.youtube.com/embed/video-id-3" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Savannah" src="https://www.youtube.com/embed/video-id-4" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Mihaka" src="https://www.youtube.com/embed/video-id-5" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Alessandra" src="https://www.youtube.com/embed/video-id-6" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Carolyn" src="https://www.youtube.com/embed/video-id-7" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Riley" src="https://www.youtube.com/embed/video-id-8" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Adelina" src="https://www.youtube.com/embed/video-id-9" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Jolien" width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Olivia" width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Nicole" width="360" height="203" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Savannah" width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Mihaka" width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Alessandra" width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Carolyn" width="360" height="203" src="https://www.youtube.com/embed/oUEBJaoJ3cY?si=ZIPqy2IFjrqxhX5V" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Riley" width="360" height="203" src="https://www.youtube.com/embed/QCt9tYipEuU?si=08aLohhzFhyPjLjC" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Adelina" width="360" height="203" src="https://www.youtube.com/embed/qWDoWBZ_FAI?si=YO8W1VhMnfcCprhH" frameborder="0" allowfullscreen></iframe>
         </div>
       </article>
     </section>
