--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Allen Chen</h1>
     </header>
     <section class="intro">
-      <p>A passionate Data Analyst who transforms complex data into clear, actionable insights to drive informed decision-making.</p>
+      <p>A creative and innovative Data Analyst who transforms complex data into clear, actionable insights to drive informed decision-making.</p>
     </section>
     <section class="contact">
       <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
