--- a/index.html
+++ b/index.html
@@ -37,26 +37,14 @@
 
         <div class="project">
           <h4>Chinese Food Website</h4>
-          <div class="project-layout">
-            <div class="project-description">
-              <p>A web application showcasing various Chinese dishes, built to be user-friendly and visually appealing.</p>
-            </div>
-            <div class="project-embed">
-              <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7346617507690020865?collapsed=1" allowfullscreen="" title="Embedded post for Chinese Food Website"></iframe>
-            </div>
-          </div>
+          <p>A web application showcasing various Chinese dishes, built to be user-friendly and visually appealing.</p>
+          <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7346617507690020865?collapsed=1" style="border: 1px solid #ddd; width: 100%; max-width: 504px; height: 542px; margin-top: 20px; border-radius: 8px;" allowfullscreen="" title="Embedded post for Chinese Food Website"></iframe>
         </div>
         
         <div class="project">
           <h4>ASL-to-Speech Interpreter App</h4>
-          <div class="project-layout">
-            <div class="project-description">
-              <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
-            </div>
-            <div class="project-embed">
-              <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7338562121372246018?collapsed=1" allowfullscreen="" title="Embedded post of ASL to Speech Interpreter App"></iframe>
-            </div>
-          </div>
+          <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
+          <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7338562121372246018?collapsed=1" style="border: 1px solid #ddd; width: 100%; max-width: 504px; height: 542px; margin-top: 20px; border-radius: 8px;" allowfullscreen="" title="Embedded post of ASL to Speech Interpreter App"></iframe>
         </div>
         
         <div class="project">
