--- a/index.html
+++ b/index.html
@@ -34,16 +34,13 @@
 
       <article class="project-category">
         <h3>Coding Projects</h3>
-
         <div class="project">
           <h4>Chinese Food Website</h4>
-          <div class="project-info">
-            <p>A web application showcasing various Chinese dishes, built to be user-friendly and visually appealing.</p>
-            <a href="https://allixar.github.io/chenhouse/" class="read-more-btn" target="_blank" rel="noopener noreferrer">
-              View Live Site
-            </a>
-          </div>
+          <p>A web application showcasing various Chinese dishes, built to be user-friendly and visually appealing.</p>
           <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7346617507690020865?collapsed=1" style="border: 1px solid #ddd; width: 100%; max-width: 504px; height: 542px; margin-top: 20px; border-radius: 8px;" allowfullscreen="" title="Embedded post for Chinese Food Website"></iframe>
+          <a href="https://allixar.github.io/chenhouse/" class="read-more-btn" target="_blank" rel="noopener noreferrer" style="display: inline-block; margin-top: 15px;">
+            View Live Site
+          </a>
         </div>
                 
         <div class="project">
