--- a/index.html
+++ b/index.html
@@ -28,21 +28,12 @@
     </section>
   </aside>
 
-  <main class="main-content">
-    <section id="portfolio">
-      <svg class="portfolio-title" viewBox="0 0 400 50">
-        <path class="portfolio-path" d="M 10 40 Q 10 10 30 10 Q 50 10 50 25 T 70 40"></path>
-        <path class="portfolio-path" d="M 80 40 L 80 10"></path>
-        <path class="portfolio-path" d="M 90 40 L 90 10"></path>
-        <path class="portfolio-path" d="M 100 40 L 100 25 C 100 10 120 10 120 25 C 120 40 100 40 100 25"></path>
-        <path class="portfolio-path" d="M 130 40 L 130 10"></path>
-        <path class="portfolio-path" d="M 140 40 L 150 10 L 160 40 M 145 25 L 155 25"></path>
-        <path class="portfolio-path" d="M 170 40 L 170 10 M 170 25 L 185 10"></path>
-        <path class="portfolio-path" d="M 195 40 L 195 10"></path>
-        <path class="portfolio-path" d="M 205 40 L 205 25 C 205 10 225 10 225 25 C 225 40 205 40 205 25"></path>
-        <path class="portfolio-path" d="M 235 40 L 235 10"></path>
-      </svg>
-      </section>
+      <main class="main-content">
+        <section id="portfolio">
+          <h2>Portfolio</h2>
+      
+          </section>
+      </main>
 
       <article class="project-category">
         <h3>Coding Projects</h3>
